--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,6 +15,7 @@ body {
   font-size: vw(20);
   @include reg;
   height: 100vh;
+  height: var(--vh);
   overflow: hidden !important;
   position: relative;
   overscroll-behavior-y: none;
